[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/game background.png" type="Texture" id=1]
[ext_resource path="res://assets/music/Theme.wav" type="AudioStream" id=4]
[ext_resource path="res://Main Menu.gd" type="Script" id=5]
[ext_resource path="res://assets/ConnectionII.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -18.0
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 2048.0
margin_bottom = 1194.0
rect_scale = Vector2( 0.501803, 0.50777 )
texture = ExtResource( 1 )

[node name="Start Game Button" type="Button" parent="."]
margin_left = 242.0
margin_top = 148.0
margin_right = 414.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true

[node name="Load Button" type="Button" parent="."]
margin_left = 241.0
margin_top = 440.0
margin_right = 413.0
margin_bottom = 511.0
custom_fonts/font = SubResource( 1 )
text = "Load"
flat = true

[node name="Quit Game Button" type="Button" parent="."]
margin_left = 463.0
margin_top = 145.0
margin_right = 591.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true

[node name="Help Button" type="Button" parent="."]
margin_left = 473.0
margin_top = 444.0
margin_right = 645.0
margin_bottom = 515.0
custom_fonts/font = SubResource( 1 )
text = "Help"
flat = true

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 209.0
margin_top = 42.0
margin_right = 678.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 2 )
text = "The Pirate Game"
[connection signal="pressed" from="Start Game Button" to="." method="_on_Start_Game_Button_pressed"]
[connection signal="pressed" from="Load Button" to="." method="_on_Load_Button_pressed"]
[connection signal="pressed" from="Quit Game Button" to="." method="_on_Quit_Game_Button_pressed"]
[connection signal="pressed" from="Help Button" to="." method="_on_Help_Button_pressed"]
